1999-02-13  Ian Peters  <ipeters@acm.org>

	* same-gnome.c (main): Add a default value for config load

1999-02-13  Ian Peters  <ipeters@acm.org>

	* same-gnome.c (main): Instead of defaulting to marbles.png, actually
	checks stored value for png file.

1999-02-03  Arturo Espinosa <arturo@nuclecu.unam.mx>

	* Makefile.am: SUBDIRS = help
	* added help subir.
	* C: moved to help.

1999-01-10  Nat Friedman  <nat@nat.org>

	* same-gnome.c (main): Added an AppBar.  Removed the 'hb' widget
 	and the 'frame' widgets.  Packed the score labels into the appbar
 	instead of the hb widget.  Added a friendly welcome message.

	Standardized the menus.
	
1998-12-30  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* same-gnome.c (main): Removed any reference to the cloned client.
	(save_state): Changed to use the config file stuff, that is
 	offered by the gnome client API.
	(restart): Likewise.

1998-10-10  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* same-gnome.c (main): Use 'gnome_master_client' instead of
 	'gnome_client_new_default'.  Connect to the gnome client's 'die'
 	signal.
	(client_connect): Removed.
	(client_die): New function, that quits the game, if the session manager
	sends a 'die' signal.

1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* same-gnome.c (game_quit_callback): Do not use the deprecated
	routines. 

	Use accelerators.

1998-07-25  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* same-gnome.desktop: Added Portuguese translation.

Wed May 06 10:04:03 1998  Kjartan Maraas  <kmaraas@fib.hl.no>

	* same-gnome.c: removed a compiler warning.
	
Thu Apr  2 01:50:44 1998  Tom Tromey  <tromey@cygnus.com>

	* same-gnome.c (game_quit_callback): Use stock buttons.  Show the
	widget.

1998-03-29  Raja R Harinath  <harinath@cs.umn.edu>

	* same-gnome.c (main): Use `stones.png' as default scenario when
	no scenario has been specified on the command line.

Sat Mar 21 10:54:57 1998  Tom Tromey  <tromey@cygnus.com>
