@@ -8,8 +8,9 @@ EXTRA_DIST = same-gnome.sgml $(same_gnome_help_DATA)
 
 all: index.html
 
+# No-op if db2html failed
 index.html: same-gnome/book1.html
-	cd $(srcdir) && cp same-gnome/book1.html index.html
+	cd $(srcdir) && cp same-gnome/book1.html index.html || touch index.html
 
 same-gnome/book1.html: same-gnome.sgml
 	-cd $(srcdir) && db2html same-gnome.sgml
@@ -19,11 +20,15 @@ dist-hook:
 	cp same-gnome/*.html $(distdir)/same-gnome
 	cp same-gnome/*.css $(distdir)/same-gnome
 
+# No-op if db2html failed
 install-data-local: index.html
-	for file in same-gnome/*.html same-gnome/*.css; do \
-	  basefile=`echo $$file | sed -e 's,^.*/,,'`; \
-	  $(INSTALL_DATA) $(srcdir)/$$file $(same_gnome_helpdir)/$$basefile; \
-	done
+	files=`echo $(srcdir)/same-gnome/*.html $(srcdir)/same-gnome/*.css`; \
+	if test "$$files" != '$(srcdir)/same-gnome/*.html $(srcdir)/same-gnome/*.css'; then \
+	  for file in $$files; do \
+	    basefile=`echo $$file | sed -e 's,^.*/,,'`; \
+	    $(INSTALL_DATA) $$file $(same_gnome_helpdir)/$$basefile; \
+	  done; \
+	fi
 
 same-gnome.ps: same-gnome.sgml
 	db2ps $<
